# tapeworm

./: Cargo.toml  README.md
resources/test/: title.flac
src/: add.rs  alias.rs  clean.rs  command.rs  deposit.rs  download.rs  editor.rs  info.rs  lib.rs  main.rs  organize.rs  scrape.rs  tag.rs  types.rs  util.rs
tests/: integration.rs
tests/common/: mod.rs
