[package]
name = "tapeworm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
audiotags = "0.5.0"
chrono = "0.4.38"
dirs = "5.0.1"
headless_chrome = "1.0.9"
rand = "0.8.5"
regex = "1.10.4"
sanitize-filename = "0.5.0"
tabwriter = "1.4.0"
url = "2.5.0"
